[gd_scene load_steps=5 format=3 uid="uid://cdfukwkxekwms"]

[ext_resource type="Script" uid="uid://fk202y6nivhj" path="res://SettingsWindow.gd" id="1_8m15r"]
[ext_resource type="Theme" uid="uid://bjpbhduw5qu7o" path="res://Themes/DarkTheme.tres" id="2_app53"]
[ext_resource type="Theme" uid="uid://djrjmwch4gevi" path="res://Themes/LightTheme.tres" id="3_sgiso"]
[ext_resource type="PackedScene" uid="uid://bupxx1k5y20dw" path="res://conversions.tscn" id="4_mmogd"]

[node name="SettingsWindow" type="Window"]
title = "Settings"
initial_position = 3
size = Vector2i(300, 355)
current_screen = 0
script = ExtResource("1_8m15r")
dark_theme = ExtResource("2_app53")
light_theme = ExtResource("3_sgiso")

[node name="Conversions" parent="." instance=ExtResource("4_mmogd")]
visible = false

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Size" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
text = "Size"

[node name="SizeOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Medium"
popup/item_0/id = 0
popup/item_1/text = "Slim"
popup/item_1/id = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ThemeLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Theme"

[node name="ThemeOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Dark Theme"
popup/item_0/id = 0
popup/item_1/text = "Light Theme"
popup/item_1/id = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ExportLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "ExportFormat"

[node name="ExportOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
selected = 0
item_count = 3
popup/item_0/text = "Godot"
popup/item_0/id = 0
popup/item_1/text = "RPG Maker MZ"
popup/item_1/id = 1
popup/item_2/text = "Unity TMP"
popup/item_2/id = 2

[node name="AutoOpen" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Open Last Project On Launch"

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="AutoSaveCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="AutoSaveSpinBox" type="SpinBox" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 1.0
prefix = "Autosave every"
suffix = "minutes"

[node name="HBoxContainer4" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="PopoutCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "Let Writing Window Popout
(Restart program unless you want
things to break!)"

[node name="SaveSettings" type="Button" parent="ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "TestSave"

[node name="HBoxContainer5" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2

[node name="Layout" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 2
popup/item_0/text = "Horizontal"
popup/item_0/id = 0
popup/item_1/text = "Vertical"
popup/item_1/id = 1

[node name="Conversion Options" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Speaker/Dialog Convert Options"

[node name="ExportCharWithStory" type="CheckBox" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Include characters when exporting
script"

[node name="DictionaryButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Custom Dictionary"

[node name="Window" type="Window" parent="ScrollContainer/VBoxContainer/DictionaryButton"]
initial_position = 4
size = Vector2i(260, 280)
visible = false

[node name="WordContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/DictionaryButton/Window"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/DictionaryButton/Window/WordContainer"]
layout_mode = 2

[node name="NewWordLineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/DictionaryButton/Window/WordContainer/HBoxContainer"]
custom_minimum_size = Vector2(162.8, 0)
layout_mode = 2

[node name="AddWordButton" type="Button" parent="ScrollContainer/VBoxContainer/DictionaryButton/Window/WordContainer/HBoxContainer"]
layout_mode = 2
text = "Add Word"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/HBoxContainer6/SizeOption" to="." method="_on_size_option_item_selected"]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/HBoxContainer/ThemeOption" to="." method="_on_theme_option_item_selected"]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/HBoxContainer2/ExportOption" to="." method="_on_export_option_item_selected"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/AutoOpen" to="." method="_on_auto_open_toggled"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer3/AutoSaveCheckBox" to="." method="_on_autosave_toggled"]
[connection signal="value_changed" from="ScrollContainer/VBoxContainer/HBoxContainer3/AutoSaveSpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/HBoxContainer4/PopoutCheckBox" to="." method="_on_popout_check_box_toggled"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/SaveSettings" to="." method="_save_config"]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/HBoxContainer5/Layout" to="." method="_on_layout_item_selected"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/Conversion Options" to="Conversions" method="show"]
[connection signal="toggled" from="ScrollContainer/VBoxContainer/ExportCharWithStory" to="." method="_on_export_char_with_story_toggled"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/DictionaryButton" to="ScrollContainer/VBoxContainer/DictionaryButton/Window" method="show"]
[connection signal="close_requested" from="ScrollContainer/VBoxContainer/DictionaryButton/Window" to="ScrollContainer/VBoxContainer/DictionaryButton/Window" method="hide"]
[connection signal="button_down" from="ScrollContainer/VBoxContainer/DictionaryButton/Window/WordContainer/HBoxContainer/AddWordButton" to="." method="_on_add_word_button_button_down"]
